@@ -406,6 +406,7 @@
 (executable
   (name test084)
   (modules test084)
+  ;(flags (:standard -dsource))
   (libraries GT)
   (preprocess (action (run %{project_root}/camlp5/pp5+gt+plugins+dump.exe %{input-file})))
   (preprocessor_deps (file %{project_root}/camlp5/pp5+gt+plugins+dump.exe)))
