@@ -1,1 +1,2 @@
   $ ./test084.exe
+  [`A (5)]
